# sumeh

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  publish.yml
CHANGELOG/: index.html
LICENSE/: index.html
api/cli/: index.html
api/core/: index.html
api/engine/engine-dask/: index.html
api/engine/engine-duckdb/: index.html
api/engine/engine-pandas/: index.html
api/engine/engine-polars/: index.html
api/engine/engine-pyspark/: index.html
api/engine/engines/: index.html
api/services/services/: index.html
api/services/services-config/: index.html
api/services/services-utils/: index.html
docs/: LICENSE.md  quickstart.md
docs/api/engine/: engine-dask.md  engine-duckdb.md  engine-pandas.md  engine-polars.md  engine-pyspark.md  engines.md
docs/api/services/: services-config.md  services-utils.md  services.md
docs/cli/: cli.md  sql.md
docs/sumeh/: cli.md  generators.md
docs/sumeh/core/: config.md  profiler.md  rules.md  schema.md  utils.md  validation.md
docs/sumeh/dash/: index.md
docs/sumeh/engines/: athena.md  bigquery.md  dask.md  doris.md  duckdb.md  engines.md  pandas.md  polars.md  pyflink.md  pyspark.md  ray_data.md  redshift.md  snowflake.md  sql_core.md  trino.md
docs/sumeh/exporters/: openmetadata.md
docs/sumeh/generators/: generator.md
docs/sumeh/generators/dialects/: athena.md  base.md  bigquery.md  databricks.md  duckdb.md  mysql.md  postgres.md  redshift.md  snowflake.md  sqlite.md
quickstart/: index.html
search/: search_index.json
sumeh/: __init__.py  cli.py  core.py  sumeh.py
sumeh/cli/: __init__.py  index.html  utils.py
sumeh/cli/commands/: __init__.py  ddl.py  sql.py  validate.py
sumeh/config/: csv.py  validate.py
sumeh/core/: __init__.py  config.py  io.py  models.py  profiler.py  protocol.py  report.py  schema.py  summarize.py  utils.py  validation.py
sumeh/core/analyzers/: __init__.py  protocol.py
sumeh/core/base/: analyzer.py  protocols.py
sumeh/core/config/: index.html
sumeh/core/constraints/: __init__.py  comparators.py  protocol.py
sumeh/core/logic/: comparators.py
sumeh/core/models/: metrics.py  validation.py
sumeh/core/profiler/: index.html
sumeh/core/rules/: index.html  manifest.json  registry.py  regristry.py  rule_definition.py  rule_model.py
sumeh/core/schema/: __init__.py  index.html  models.py  validator.py
sumeh/core/services/profiler/: profiler.py
sumeh/core/services/schema/: __init__.py  models.py  validator.py
sumeh/core/services/sink/: model.py
sumeh/core/sink/: model.py  protocol.py
sumeh/core/utils/: index.html
sumeh/core/validation/: index.html
sumeh/dash/: app.py  index.html
sumeh/engine/: bigquery_engine.py  dask_engine.py  duckdb_engine.py  pandas_engine.py  polars_engine.py  pyspark_engine.py
sumeh/engines/: __init__.py  bigquery_engine.py  dask_engine.py  duckdb_engine.py  pandas_engine.py  polars_engine.py  pyspark_engine.py
sumeh/engines/athena/: __init__.py  engine.py  index.html
sumeh/engines/bigquery/: __init__.py  engine.py  index.html
sumeh/engines/dask/: __init__.py  analyzers.py  engine.py  index.html  registry.py
sumeh/engines/doris/: __init__.py  engine.py  index.html
sumeh/engines/duckdb/: __init__.py  engine.py  index.html  validator.py
sumeh/engines/engines/: index.html
sumeh/engines/pandas/: __init__.py  analyzers.py  dataframe.py  engine.py  index.html  registry.py
sumeh/engines/polars/: __init__.py  analyzers.py  dataframe.py  engine.py  index.html  registry.py
sumeh/engines/pyflink/: __init__.py  dataframe.py  engine.py  index.html  protocols.py  registry.py  sql_generator.py  udfs.py
sumeh/engines/pyspark/: __init__.py  analyzers.py  dataframe.py  engine.py  index.html  registry.py
sumeh/engines/ray/: __init__.py  analyzers.py  engine.py  registry.py
sumeh/engines/ray_data/: index.html
sumeh/engines/redshift/: __init__.py  engine.py  index.html
sumeh/engines/snowflake/: __init__.py  engine.py  index.html
sumeh/engines/sql_core/: __init__.py  analyzers.py  compiler.py  index.html  registry.py  validator.py
sumeh/engines/trino/: __init__.py  engine.py  index.html
sumeh/exporters/: __init__.py  openmetadata.py
sumeh/exporters/openmetadata/: index.html
sumeh/generators/: __init__.py  ddl.py  generator.py  index.html  transpiler.py
sumeh/generators/dialects/: __init__.py  athena.py  base.py  bigquery.py  databricks.py  duckdb.py  mysql.py  postgres.py  redshift.py  snowflake.py  sqlite.py
sumeh/generators/dialects/athena/: index.html
sumeh/generators/dialects/base/: index.html
sumeh/generators/dialects/bigquery/: index.html
sumeh/generators/dialects/databricks/: index.html
sumeh/generators/dialects/duckdb/: index.html
sumeh/generators/dialects/mysql/: index.html
sumeh/generators/dialects/postgres/: index.html
sumeh/generators/dialects/redshift/: index.html
sumeh/generators/dialects/snowflake/: index.html
sumeh/generators/generator/: index.html
sumeh/services/: config.py  utils.py
sumeh/services/sql/: __init__.py  generator.py
sumeh/sinks/openmetadata/: __init__.py  sink.py
tests/: conftest.py  index.html  test_dask_engine.py  test_dask_engine_dates.py  test_duckdb_engine.py  test_duckdb_engine_dates.py  test_pandas_engine_dates.py  test_polars_engine.py  test_polars_engine_dates.py  test_pyspark.py  test_pyspark_engine.py  test_pyspark_engine_dates.py  test_rule_def.py  test_sql_generator.py  test_sumeh.py  test_utils.py
tests/cli/: test_cli.py
tests/config/: test_csv.py  test_validate.py
tests/core/: test_comparator.py  test_profile.py  test_rules.py  test_schema.py  test_validation.py
tests/engines/: conftest.py  test_dask_engine.py  test_duckdb.py  test_duckdb_engine.py  test_pandas.py  test_pandas_engine.py  test_polars.py  test_polars_engine.py  test_pyspark.py  test_pyspark_engine.py  test_ray.py  test_sql_core.py
tests/exporters/: test_openmetadata.py
tests/generators/: test_ddl.py  test_transpiler.py
tests/mock/: config.csv  data.csv
(+7 files in other folders)
