[tool.poetry]
name = "sumeh"
version = "0.1.0"
description = ""
authors = ["Demetrius Albuquerque <demetrius.albuquerque@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cuallee = "^0.15.0"
python-dateutil = "^2.9.0.post0"


[tool.poetry.extras]
dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
]

aws = [
    "boto3"
]

mysql = [
    "mysql-connector-python",
    "pandas"
]

postgresql = [
    "psycopg2-binary",
    "pandas"
]

bigquery = [
    "google-cloud-bigquery"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
