[tool.poetry]
name                  = "sumeh"
version               = "2.0.0"
description           = "Unified Data Quality Validation Framework"
readme                = "README.md"
homepage              = "https://github.com/maltzsama/sumeh"
repository            = "https://github.com/maltzsama/sumeh"
license               = "Apache-2.0"
keywords              = ["data-quality", "validation", "dq", "etl", "cli"]
authors               = [
  "Demetrius Albuquerque <demetrius.albuquerque@yahoo.com.br>",
  "Otavio Lara <otavio.lara@example.com>"
]

packages = [ {include = "sumeh"} ]


classifiers = [   
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker"   = "https://github.com/maltzsama/sumeh/issues"
"Documentation" = "https://maltzsama.github.io/sumeh"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = ">=2.8.0"
sqlglot = "^27.0.0"
typer = "^0.19.0"
rich = "^14.2.0"
pandas = { version = "^2.2.0", optional = false }
dask = { version = "^2025.10.0", extras = ["complete"], optional = true }
pyspark = { version = "^3.5.0", optional = true }
polars = { version = "^1.34.0", optional = true }
duckdb = { version = "^1.4.0", optional = true }
apache-flink = { version = "^1.20.0", optional = true }
ray = { version = "^2.30.0", extras = ["data"], optional = true }
pyathena = { version = "^3.30.0",   optional = true }
google-cloud-bigquery = { version = "^3.40.1", optional = true }
snowflake-connector-python = { version = "^4.3.0", optional = true }
redshift-connector = { version = "^2.1.12", optional = true }
trino = { version = "^0.337.0", optional = true }
pydoris = { version = "^1.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
coverage = "^7.0.0"
python-semantic-release = "^10.4.0"

[tool.poetry.extras]

dev = [
    "coverage",
    "mypy",
    "pytest",
    "ruff"
]

doris     = ["pydoris"]
pyspark   = ["pyspark"]
dask      = ["dask"]
pyflink   = ["apache-flink"]
ray       = ["ray"]
polars    = ["polars"]
duckdb    = ["duckdb"]
athena    = ["pyathena"]
bigquery  = ["google-cloud-bigquery"]
snowflake = ["snowflake-connector-python"]
redshift  = ["redshift-connector"]
trino     = ["trino"]



[tool.poetry.scripts]
sumeh = "sumeh.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_variables = [
    "sumeh/__init__.py:__version__"
]
prerelease_token = "rc"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.release]
match = "^release/.+"
prerelease = true
prerelease_token = "rc"