[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumeh"
version = "2.0.0"
description = "Unified Data Quality Validation Framework"
readme = "README.md"
license = "Apache-2.0"
authors = [
  { name = "Demetrius Albuquerque", email = "demetrius.albuquerque@yahoo.com.br" },
  { name = "Otavio Lara", email = "otavio.lara@example.com" }
]
keywords = ["data-quality", "validation", "dq", "etl", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "python-dateutil>=2.8.0",
    "sqlglot>=27.0.0,<28",
    "typer>=0.19.0,<1",
    "rich>=14.2.0,<15",
    "pandas>=2.2.0,<3",
]

[project.optional-dependencies]
dask      = ["dask[complete]>=2025.10.0,<2026"]
pyspark   = ["pyspark>=3.5.0,<4"]
polars    = ["polars>=1.34.0,<2"]
duckdb    = ["duckdb>=1.4.0,<2"]
pyflink   = ["apache-flink>=2.0.0,<3"]
ray       = ["ray[data]>=2.30.0,<3"]
athena    = ["pyathena>=3.30.0,<4"]
bigquery  = ["google-cloud-bigquery>=3.40.1,<4"]
snowflake = ["snowflake-connector-python>=4.3.0,<5"]
redshift  = ["redshift-connector>=2.1.12,<3"]
trino     = ["trino>=0.337.0,<1"]
doris     = ["pydoris>=1.1.0,<2"]
dev       = ["pytest>=8", "pytest-cov>=4.1", "ruff>=0.1", "mypy>=1", "coverage>=7", "python-semantic-release>=10.4"]

[project.urls]
Homepage      = "https://github.com/maltzsama/sumeh"
Repository    = "https://github.com/maltzsama/sumeh"
Documentation = "https://maltzsama.github.io/sumeh"
"Bug Tracker" = "https://github.com/maltzsama/sumeh/issues"

[project.scripts]
sumeh = "sumeh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sumeh"]

[tool.hatch.envs.default]
dependencies = ["pytest>=8", "pytest-cov>=4.1", "ruff>=0.1", "mypy>=1", "coverage>=7"]

[tool.hatch.envs.pyflink]
dependencies = ["apache-flink>=2.0.0,<3", "sumeh"]

[tool.hatch.envs.dask]
dependencies = ["dask[complete]>=2025.10.0,<2026", "sumeh"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["sumeh/__init__.py:__version__"]
prerelease_token = "rc"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.release]
match = "^release/.+"
prerelease = true
prerelease_token = "rc"